--- a/webtemplate/app/Resources/views/base.html.twig
+++ b/webtemplate/app/Resources/views/base.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,10 +8,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-.selected { background-color: #ccc; }
-</style>
+<link rel="stylesheet" href="{{ asset ('css/estilos.css') }}">
+
 <body>
 
 <!-- Navbar -->
@@ -35,8 +34,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
 </nav>
 {% endblock %}
+
 {% block main %}
 {% endblock %}
+
 <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-32">
       <h4>Footer</h4>
