--- a/webtemplate/app/Resources/views/default/empleats.html.twig
+++ b/webtemplate/app/Resources/views/default/empleats.html.twig
@@ -5,14 +5,21 @@
 <div class="w3-main" style="margin-left:250px">
 
   <div class="w3-row w3-padding-64">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Empleats</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  {% block showemp %}
+      {% for empleat in resultat %}
+      <div class="w3-card-4 card_emp">
+      <header class="w3-container">
+          <img class="icono_emp" src="{{ asset ('img/empleat/User'~random(2)~'.png')}}" />
+          <h1 class="w3-text-teal"><a href="{{ path('empleat', {'id' : empleat.EMPL_ID}) }}">{{empleat.EMPL_FORNAME}} {{empleat.EMPL_SURNAME}}</a> <span class="w3-badge w3-blue emp_id"> {{empleat.EMPL_NUMBER}}</span> <span class="emp_id">Num. Empleat</span></h1>
+          <hr>
+           {{ render(controller("AppBundle:Default:sidebar", {'id' : empleat.EMPL_ID } )) }}
+        </header>
+      </div>        
+      <br>
+     {% endfor %}
     </div>
-  
-  </div>  
-
+   </div>  
+   {% endblock %}
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
