--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Page/contact.html.twig
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Page/contact.html.twig
@@ -32,7 +32,7 @@
         {{ form_row(form.departament) }}
         {{ form_row(form.body) }}
         {{ form_rest(form) }}
-    <input type="submit" />
+    <input type="submit" class="w3-button w3-green" />
 </form>
 
 
