--- a/Simfony/symblog/web/css/screen.css
+++ b/Simfony/symblog/web/css/screen.css
@@ -3,7 +3,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px; width: 100%; height: 100%; color: #000; font-size: 14px; }
 .clear { clear: both; }
 
-#wrapper { margin: 0 auto; width: 1000px; }
+#wrapper { margin: 0 auto; width: 1000px;  }
+
 #wrapper a { text-decoration: none; color: #F48A00; }
 #wrapper span.highlight { color: #F48A00; }
 
@@ -23,6 +24,6 @@ body { line-height: 1;font-family: Arial, Helvetica, sans-serif;font-size: 12px;
 .main-col h1,
 .main-col h2
     { line-height: 1.2em; font-size: 32px; margin-bottom: 10px; font-weight: normal; color: #F48A00; }
-.main-col p { line-height: 1.5em; margin-bottom: 20px; }
+.main-col p { line-height: 1.5em; margin-bottom: 20px; text-align: justify; }
 
 #footer { border-top: 1px solid #ccc; clear: both; text-align: center; padding: 10px; color: #aaa; }
