--- a/Simfony/symblog/app/Resources/views/base.html.twig
+++ b/Simfony/symblog/app/Resources/views/base.html.twig
@@ -7,9 +7,9 @@
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-        {% block stylesheets %}
+        {% block stylesheets  %}
             <link href='http://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet' type='text/css'>
-            <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light+Two|La+Belle+Aurore' rel='stylesheet' type='text/css'>
             <link href="{{ asset('css/screen.css') }}" type="text/css" rel="stylesheet" />
             <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
             
