--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Blog/show.html.twig
@@ -1,12 +1,12 @@
 {# src/Blogger/BlogBundle/Resouces/views/Blog/show.html.twig #}
 {% extends 'BloggerBlogBundle::base.html.twig' %}
-
+{% block stylesheet %}{{parent ()}}{% endblock %}
 {% block title %}{{ blog.title }}{% endblock %}
 
 {% block body %}
-    <article class="blog">
+        <article class="blog">
         <header>
-            <div class="date"><time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
+            <div class="date"><time datetime="{{ blog.created|date('c') }}">{{ blog.created | localizeddate('long', 'none', app.request.locale)  }}</time></div>
             <h2>{{ blog.title }}</h2>
         </header>
         <img src="{{ asset(['images/'~blog.image]|join) }}" alt="{{ blog.title }} image not found" class="large" />
@@ -15,9 +15,12 @@
         </div>
         <section class="comments" id="comments">
         <section class="previous-comments">
-            <h3>Comments</h3>
-            {% include 'BloggerBlogBundle:Comment:index.html.twig' with { comments: comments } %}
+            <h3>Afegir comentari</h3>
+            {{ render(controller('BloggerBlogBundle:Comment:new', {'blog_id': blog.id})) }}
+            <h3>Commentaris</h3>
+            {% include 'BloggerBlogBundle:Comment:index.html.twig' with { 'comments': comments } %}
         </section>
-    </section>
+        </section>
     </article>
+       
 {% endblock %}
