--- a/Simfony/symblog/app/Resources/views/base.html.twig
+++ b/Simfony/symblog/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
         {% endblock %}
         <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body>
+    <body BGPROPERTIES="FIXED">
 
         <section id="wrapper">
             <header id="header">
