--- a/Simfony/symblog/web/css/screen.css
+++ b/Simfony/symblog/web/css/screen.css
@@ -3,8 +3,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 body { line-height: 1;font-family: Arial, Helvetica, sans-serif;
 	   font-size: 12px; width: 100%; height: 100%; 
 	   color: #000; font-size: 14px; 
-	   background-image: url("/images/platja.jpeg");
-	   background-size: cover; }
+	   /*background-image: url("/images/platja.jpeg"); */
+	   background:url("/images/platja.jpeg") no-repeat fixed;
+	   background-size: cover; 
+	}
 .clear { clear: both; }
 #wrapper { margin: 0 auto; width: 1000px; background-color: #fff; 
 		   border-left: 3px solid white; 
