--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Page/index.html.twig
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Page/index.html.twig
@@ -6,16 +6,16 @@
         <article class="blog">
             <div class="date"><img style="width: 35px; height: 35px; border: 0px; padding: 0px;" class="icono" src="{{ asset('images/calen.png') }}"><time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
             <header>
-                <h2><a href="{{ path('blogger_blog_blog_show', { 'id': blog.id }) }}">{{ blog.title|upper }}</a></h2>
+                <h2><a href="{{ path('BloggerBlogBundle_show', { 'id': blog.id }) }}">{{ blog.title|upper }}</a></h2>
             </header>
 
             <img src="{{ asset(['bundles/bloggerblog/images/', blog.image]|join) }}" />
             <div class="snippet">
                 <p>{{ blog.blog(300) }} ...</p>
-                <p class="continue"><a href="{{ path('blogger_blog_blog_show', { 'id': blog.id }) }}">Continue reading...</a></p>
+                <p class="continue"><a href="{{ path('BloggerBlogBundle_show', { 'id': blog.id }) }}">Continue reading...</a></p>
            </div>        
             <footer class="meta">
-                <p>Comments: <a href="{{ path('blogger_blog_blog_show', { 'id': blog.id }) }}#comments">{{ blog.comments|length }}</a></p>
+                <p>Comments: <a href="{{ path('BloggerBlogBundle_show', { 'id': blog.id }) }}#comments">{{ blog.comments|length }}</a></p>
                 <p>Posted by <span class="highlight"></span> at {{ blog.created|date('h:iA') }} 
                 {% if blog.comments | length > 0 %} 
                     (Ultimo post:    
