--- a/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Page/sidebar.html.twig
+++ b/Simfony/symblog/src/Blogger/BlogBundle/Resources/views/Page/sidebar.html.twig
@@ -20,7 +20,7 @@
         <article class="comment">
             <header>
                 <p class="small"><span class="highlight">{{ comment.user }}</span> commented on
-                    <a href="{{ path('blogger_blog_blog_show', { 'id': comment.blog.id }) }}#comment-{{ comment.id }}">
+                    <a href="{{ path('BloggerBlogBundle_show', { 'id': comment.blog.id }) }}#comment-{{ comment.id }}">
                         {{ comment.blog.title }}
                     </a>
                     [<em><time datetime="{{ comment.created|date('c') }}">{{ comment.created|created_ago }}</time></em>]
