--- a/PHP/PHP - BASES DADES/PHP - base dades mydb/estilos.css
+++ b/PHP/PHP - BASES DADES/PHP - base dades mydb/estilos.css
@@ -35,13 +35,16 @@ caption { font-weight: bold;
 		a { text-decoration: none;
 			margin-right: 10px; }
 
-		#ventana {
-			position: absolute;
-			margin: = auto;
+		.ventana {
+			position: fixed;
+			left: 150px;
+			top: 100px;
 			width: 400px;
-			height: 100px;
+			height: 300px;
 			min-height: 100px; 
-			z-index: 4;}
+			z-index: 4; 
+			border: 2px solid black;
+			background-color: white; }
 
 		iframe { width: 400; height: 300px; }
 
